--- a/model_experiments.ipynb
+++ b/model_experiments.ipynb
@@ -2608,7 +2608,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv (3.10.12)",
    "language": "python",
    "name": "python3"
   },
